added documentation for /api/announcements/{date} endpoint
